fix: gap between cards

--- a/container.css
+++ b/container.css
@@ -1,5 +1,5 @@
 .container {
   display: flex;
-  gap: 32px;
+  gap: 30px;
   align-items: flex-end;
 }
